src/test/deca/syntax/invalid/mauvais_main_vide_1.deca
// Description:
//    main vide suivi d'un point-virgule
//
// Resultats:
// ligne 8:   "extraneous input ';' expecting <EOF>"


{ };
